fixed ID and classes but ID="test" is not unique as if i do make it unique my code breaks in nav bar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,10 +47,12 @@ h1 {
 }
 
 /* adds effects to my skills ID */
-.skills {
+#text {
   color: #C16E70;
   font-weight: bolder;
 }
+
+
 
 /* this is where you wanna make changes */
 header {
